A compiler worker started with a module's own -J flags maps an AOT cache trained under the same flags: the flags jk does not pass itself join the cache key and start the trainer's JVM, so a novel flag set records its own cache instead of mapping the bare one with a mismatch warning, and a module whose -J lines only restate what jk grants keeps the bare key